# web-scraper

./: README.MD  pyproject.toml  web-scraper.py
Tests/: test_scrapper.py
scrapper/: web-scraper.py
