[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = ""
authors = ["Daviey52 <davidkariska@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
bs4 = "^0.0.1"
openpyxl = "^3.0.9"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
